--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -35,9 +35,9 @@
 
                     <div id="bar-1" class="bar-main-container azure">
 
-                      <div class="bar-percentage" data-percentage="46">Distance to Empty &nbsp; {{vm.distanceData.value }}</div>
+                      <div class="bar-percentage" data-percentage="46">Distance to Empty &nbsp; {{vm.distancetoEmpty }}</div>
                       <md-slider-container class="slider-container" style="margin-left: 10%;width:80%;">
-                            <md-slider ng-disabled="true" flex min="0"  max="60" ng-model="vm.distanceData.value" aria-label="red" id="red-slider">
+                            <md-slider ng-disabled="true" flex min="0"  max="120" ng-model="vm.distancetoEmpty" aria-label="red" id="red-slider">
                         </md-slider>
                           <!--<md-slider flex=""   flex min="0"  max="120" ng-model="vm.distanceData.value" aria-label="red" id="red-slider">
                         </md-slider>
