--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -66,9 +66,7 @@
             <div class="panel-heading ">
                <h3 class="panel-title ">Last Trip</h3>
             </div>
-            
-<br>
-
+            <br>
       <div layout="column" style="margin-bottom:12px !important" flex="100" layout-xs="column">
           <div layout="row">
             <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general" number="{{vm.engineHours}}" header="Total " content="Engine Hours" bgcolor="#FF6103 " style="margin-right:10px "></tab-list>
@@ -86,13 +84,11 @@
             <tab-list style="margin-left: 15px;width:40%;" flex="45" flex-xs="100" icon="icon-running "  number="{{vm.DGEHrs}}" header="" content=" DGE/Hrs" bgcolor="#AEACA0 " style="margin-right:10px "></tab-list>
          </div>                   
       </div>
-
-         
          </div>
       </div>
       <div class="panel panel-primary "  flex-xs="100 " flex="100 ">
          <div class="panel-heading ">
-            <h3 class="panel-title ">Gas Filled/Day</h3>
+            <h3 class="panel-title ">Gas Filled</h3>
          </div>
          <div class="panel-body ">
             <div flex="30 " style="float: right; "> 
@@ -109,7 +105,7 @@
       </div>
       <div class="panel panel-primary "  flex-xs="100 " flex="100 ">
          <div class="panel-heading ">
-            <h3 class="panel-title ">Site View</h3>
+            <h3 class="panel-title ">Gas Consumed</h3>
          </div>
          <div class="panel-body ">
             <basic-line-chart data="vm.lineChartData "></basic-line-chart>
