--- a/web/client/app/components/fuel/fuel.html
+++ b/web/client/app/components/fuel/fuel.html
@@ -57,7 +57,7 @@
                     <h3 class="panel-title ">Gas Consumed</h3>
                 </div>
                 <div class="panel-body">
-                    <basic-line-chart style="height:100px;" data="vm.lineChartData" ng-repeat="roll in vm.deviceslist"></basic-line-chart>
+                    <basic-line-chart style="height:100px;" data="roll.lineChartData" ng-repeat="roll in vm.deviceslist"></basic-line-chart>
                 </div>
             </div></div>
 
