--- a/web/client/app/components/efficiency/efficiency.scss
+++ b/web/client/app/components/efficiency/efficiency.scss
@@ -289,9 +289,16 @@ efficiencyFile {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    padding: 9px 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
     width: 96%;
-    height: 16px;
+    height: 25px;
+    color: white;
+    font-size: 12pt;
+}
+
+.bar-percentage span {
+   color: white;
+    font-size: 16pt;
 }
 
     .md-track {
