Alarm color changes & display location

--- a/cards/components/listingItems/alarmListItem/alarmListItem.web.scss
+++ b/cards/components/listingItems/alarmListItem/alarmListItem.web.scss
@@ -1,7 +1,7 @@
 .alarm-list-item {
 
     .warning-text {
-        color:#ffc200 !important;
+        color:#fd7c00 !important;
     }   
 
     .healthy-text {
@@ -30,7 +30,7 @@
   }
 
   .warning {
-    background-color: #ffc200;
+    background-color: #fd7c00;
   }
 
 
