--- a/web/client/app/components/alerts/alerts.html
+++ b/web/client/app/components/alerts/alerts.html
@@ -39,8 +39,7 @@
           <div layout="row">
             <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.protect_lamp_status}}" header="Protect" content="Lamp Status" bgcolor="#7B68EE
             " style="margin-right:10px "></tab-list>
-            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.amber_lamp_status}}" header="Amber" content="Lamp Status" bgcolor="#ffbf00
-            " style="margin-right:10px "></tab-list>       
+            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.amber_lamp_status}}" header="Amber" content="Lamp Status" bgcolor="#fd7c00" style="margin-right:10px "></tab-list>       
            </div>
             <br>    
       </div>
