--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -35,7 +35,7 @@
 
                     <div id="bar-1" class="bar-main-container azure">
 
-                      <div class="bar-percentage" data-percentage="46">Distance to Empty &nbsp; <span>{{ vm.distancetoEmpty }}</span></div>
+                      <div class="bar-percentage" data-percentage="46">Distance to Empty &nbsp; <span>{{ vm.distancetoEmpty }} Miles</span></div>
                       <md-slider-container class="slider-container" style="margin-left: 10%;width:80%;">
                             <!--<md-slider ng-disabled="true" flex min="0"  max="120" ng-model="vm.distancetoEmpty" aria-label="red" id="red-slider">
                         </md-slider>-->
