--- a/web/client/app/components/fuel/fuel.html
+++ b/web/client/app/components/fuel/fuel.html
@@ -33,7 +33,7 @@
                <h3 class="panel-title ">Gas Filled</h3>
             </div>
             <div class="panel-body ">
-               <bar-chart layout-fill data="vm.milesGallonsFilledData " title="barChart "></bar-chart>
+               <barline-chart layout-fill data="vm.milesGallonsData" title="barChart"></barline-chart>
             </div>
          </div>
       </div>
