--- a/web/client/app/components/alerts/alerts.html
+++ b/web/client/app/components/alerts/alerts.html
@@ -20,29 +20,22 @@
       </div>
       <div layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row">
 
-          <div flex-xs="100" flex="50">
+          <div flex-xs="100" flex="100">
          <div class="panel panel-primary">
             <div class="panel-heading">
                <h3 class="panel-title">Engine Alerts</h3>
             </div>
-
-
             <br><br>
 
 
-      <div layout="column" style="margin-bottom:12px !important" flex="100" layout-xs="column">
-          <div layout="row">
-            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general" number="{{vm.red_stop_lamp_status}}" header="Red Stop" content="Lamp Status" bgcolor="#FF6103 " style="margin-right:10px "></tab-list>
-            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{ vm.malfunction_indicator_lamp_status }}" header="Malf" content="Indicator Lamp Status" bgcolor="#52D5F5 " style="margin-right:10px"></tab-list>
-          </div>
-            <br>
-          <div layout="row">
-            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.protect_lamp_status}}" header="Protect" content="Lamp Status" bgcolor="#7B68EE
+         <div layout="row" style="margin-bottom:12px !important" layout-xs="column">
+            <tab-list style="margin-left: 15px;width: 40%;" flex="25" flex-xs="100" icon="icon-warning-general" number="{{vm.red_stop_lamp_status}}" header="Red Stop" content="Lamp Status" bgcolor="#FF6103 " style="margin-right:10px "></tab-list>
+            <tab-list style="margin-left: 15px;width: 40%;" flex="25" flex-xs="100" icon="icon-warning-general"  number="{{ vm.malfunction_indicator_lamp_status }}" header="Malf" content="Indicator Lamp Status" bgcolor="#52D5F5 " style="margin-right:10px"></tab-list>
+            <tab-list style="margin-left: 15px;width: 40%;" flex="25" flex-xs="100" icon="icon-warning-general"  number="{{vm.protect_lamp_status}}" header="Protect" content="Lamp Status" bgcolor="#7B68EE
             " style="margin-right:10px "></tab-list>
-            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.amber_lamp_status}}" header="Amber" content="Lamp Status" bgcolor="#fd7c00" style="margin-right:10px "></tab-list>       
-           </div>
-            <br>    
+            <tab-list style="margin-left: 15px;width: 40%;" flex="25" flex-xs="100" icon="icon-warning-general"  number="{{vm.amber_lamp_status}}" header="Amber" content="Lamp Status" bgcolor="#fd7c00" style="margin-right:10px "></tab-list>       
       </div>
+
 
 <!--
 
@@ -89,7 +82,7 @@
          </div>
           </div>
 
-          <div flex-xs="100" flex="50">
+          <!--<div flex-xs="100" flex="50">
               <div class="panel panel-primary"  flex-xs="100" style="margin-left: 5px;">
             <div class="panel-heading">
                <h3 class="panel-title">Schedule Maintenance</h3>
@@ -117,7 +110,7 @@
                     </div>       
 
          </div>
-          </div>
+          </div>-->
       </div>
       <div layout-xs="coloumn" layout-sm="row" layout-md="row" layout-gt-md="row">
       <div flex-xs="100" flex="100">
